# fastsqs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: docs.yml  release.yml
docs/: examples.md  index.md  troubleshooting.md
docs/about/: contributing.md  license.md  versioning.md
docs/concepts/: context-and-state.md  fifo-ordering.md  lifecycle.md  partial-batch-failure.md  queue-type-detection.md  routing.md
docs/get-started/: installation.md  quickstart.md  why.md
docs/guide/: builtin-middleware.md  dependency-injection.md  eventbridge-pipes.md  fifo-failure-modes.md  middleware.md  multiplexing.md  partial-batch-failure.md  routers-and-defaults.md  routing-by-key.md  routing-by-type.md  testing.md
docs/reference/: app.md  context.md  dependencies.md  events.md  exceptions.md  index.md  middleware.md  queue-type.md  router.md  testing.md  utils.md
examples/: README.md
examples/comprehensive_example/: README.md  lambda_function.py  requirements.txt
examples/custom_middleware_example/: README.md  lambda_function.py
examples/middleware_example/: README.md  lambda_function.py
examples/nested_example/: README.md  lambda_function.py
examples/ordering_with_standard_queues/: README.md  lambda_function.py
examples/preset_example/: README.md  lambda_function.py
examples/pydantic_nested_example/: README.md  lambda_function.py
examples/simple_fifo_example/: README.md  lambda_function.py
examples/simple_standard_example/: lambda_function.py
examples/vehicle_inheritance_example/: lambda_function.py
fastsqs/: __init__.py  app.py  events.py  exceptions.py  presets.py  processing.py  testing.py  types.py  utils.py
fastsqs/middleware/: __init__.py  base.py  error_handling.py  logging.py  parallelization.py  timing.py  visibility.py
fastsqs/routing/: __init__.py  entry.py  router.py
local/: docker-compose.yml
tests/: conftest.py  test_batch_failures.py  test_batch_semantics.py  test_body_parsing_edges.py  test_concurrency.py  test_context_state_safety.py  test_coverage_gaps.py  test_di_prototype.py  test_events.py  test_exceptions.py  test_fifo_concurrency_grouping.py  test_fixes.py  test_handler_injection_utils.py  test_handler_result.py  test_key_value_routing.py  test_logging_middleware.py  test_message_type_naming.py  test_middleware.py  test_middleware_composition.py  test_multi_router_dispatch.py  test_pipe_and_detection.py  test_presets.py  test_queue_type_resolution.py  test_recheck_fixes.py  test_routing.py  test_routing_edge.py  test_subrouter_dispatch.py  test_testing_client_surface.py  test_timing_middleware.py  test_typed_context.py  test_validation.py  test_validation_middleware.py
tests/aws/: _e2e_handler.py  conftest.py  test_batching_window_e2e.py  test_concurrency_e2e.py  test_dlq_copy_fidelity_e2e.py  test_esm_validation_e2e.py  test_fifo_concurrency_e2e.py  test_fifo_dedup_id_e2e.py  test_fifo_e2e.py  test_fifo_ordering_e2e.py  test_filter_criteria_e2e.py  test_idempotency_e2e.py  test_mixed_and_timeout_e2e.py  test_partial_redrive_isolation_e2e.py  test_receive_count_progression_e2e.py  test_redrive_allow_policy_e2e.py  test_report_batch_item_failures_e2e.py  test_response_shape_contract_e2e.py  test_strict_partial_batch_e2e.py  test_warm_reuse_e2e.py  (+1 more)
(+11 files in other folders)
