[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "fastsqs"
version = "1.1.2"
description = "A FastAPI-style router for AWS SQS on Lambda: pydantic routing, dependency injection, middleware, and native partial batch failure."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Gabriel LaFayette", email = "gabriel.lafayette@proton.me" }]
keywords = [
    "sqs",
    "aws",
    "lambda",
    "serverless",
    "async",
    "fastapi",
    "pydantic",
    "message-processing",
]
dependencies = [
    "pydantic>=2.0.0",
    "fast-depends>=3.0.0,<4.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/imgabrieldev/fastsqs"
Documentation = "https://github.com/imgabrieldev/fastsqs#readme"
Changelog = "https://github.com/imgabrieldev/fastsqs/blob/main/CHANGELOG.md"
Repository = "https://github.com/imgabrieldev/fastsqs"
Issues = "https://github.com/imgabrieldev/fastsqs/issues"

[tool.setuptools.packages.find]
include = ["fastsqs*"]

[tool.setuptools.package-data]
fastsqs = ["py.typed"]
